samples/_failures_safe/1761180987_333385_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bae93328.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_bae93328.c:178:9: error: expected declaration or statement at end of input
  178 |         if (dist[i] == INT_MAX) {
      |         ^~
./samples/SAFE/__tmp_bae93328.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bae93328.c:178:9: error: expected declaration or statement at end of input
